# biohacker-rag

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  reset_db.py
data/: faq_document.txt
outputs/: evaluation_samples.json
src/: build_index.py  evaluator.py  main.py  query.py
