[project]
name = "biohacker-rag"
version = "0.1.0"
description = "Chatbot RAG para optimización biológica"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "langchain-chroma>=0.1.2",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.2",
    "rich>=14.3.3",
]

[project.scripts]
biohacker = "src.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
